name:                joy
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/owainlewis/joy#readme
license:             BSD3
license-file:        LICENSE
author:              Owain Lewis
maintainer:          owain@owainlewis.com
copyright:           2016 Owain Lewis
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.Joy.Evaluator,
                       Language.Joy.AST,
                       Language.Joy.Parser,
                       Language.Joy.State,
                       Language.Joy.Std
  build-depends:       base >= 4.7 && < 5, containers, parsec, mtl, lens
  default-language:    Haskell2010

executable joy-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , joy
  default-language:    Haskell2010

test-suite joy-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , joy
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/owainlewis/joy
